--- a/style.css
+++ b/style.css
@@ -106,6 +106,13 @@ nav:hover ul li:not(:hover){
 }
 
 @media screen and (max-width:768px){
+  *{
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    outline: none;
+    border: 0px;
+  }
   .logo{
     display:none;
   }
@@ -182,58 +189,6 @@ nav:hover ul li:not(:hover){
   }
   
 }
-/* 
-.navlinks {
-  color: #fff;
-  animation: first_color .5s ease-in-out infinite alternate;
-}
-.fa-brands fa-discord {
-  animation-name: second_color;
-}
-@keyframes first_color{
-  0% {
-    text-shadow: 0 0 10px #ff1177, 0 0 20px #d6249f, 0 0 30px #285AEB}
-  100% {
-    text-shadow: 0 0 5px #ff1177, 0 0 10px #d6249f, 0 0 15px #285AEB}
-  }
-@keyframes second_color {
-  0% {
-    text-shadow: 0 0 10px #1877f2, 0 0 20px #1459b3, 0 0 30px #179bff}
-  100% {
-    text-shadow: 0 0 5px #1877f2, 0 0 10px #1459b3, 0 0 15px #179bff}
-  } */
-
-  /* HeroPage */
-  #magic {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    display: block;
-    top: 0;
-    left: 0;
-    z-index: -9999;
-  }
-  
-  .playground{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    display: block;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-  
-  }
-  .bottomPosition{
-    position: relative;
-    text-align: center;
-    margin-bottom: 200px;
-  
-  }
 
   /* Service Section */
 
@@ -249,9 +204,6 @@ nav:hover ul li:not(:hover){
     padding-right: 8%;
     background: black;
   }
-  
-
-
 
   h5 {
     font-size: 50px;
@@ -271,8 +223,6 @@ nav:hover ul li:not(:hover){
     padding-right: 30%;
     margin-top: 6%;
   }
-
-
 
   .what .about-text-right {
     text-align: right;
@@ -303,78 +253,14 @@ nav:hover ul li:not(:hover){
     padding-bottom: 20%; 
     padding-top: 100px;
 }  
-/* @media screen and (max-width: 760px) {  
+@media screen and (max-width: 760px) {  
     .project-container {  
          grid-template-columns: repeat(2, 1fr);  
    }  
-}   */
+}  
 
 
-.project-card {  
-    position: relative;  
-    z-index: 1;  
-    width: 100%;  
-    padding-bottom: 150%;  
-    perspective: 1000px;  
-}  
-.project-card__cover {  
-    position: absolute;  
-    z-index: 1;  
-    top: 0;  
-    left: 0;  
-    width: 100%;  
-    height: 100%;  
-    overflow: hidden;  
-    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);  
-    background-size: cover;  
-    perspective-origin: 50% 50%;  
-    transform-style: preserve-3d;  
-    transform-origin: top center;  
-    will-change: transform;  
-    transform: skewX(0.001deg);  
-    transition: transform 0.35s ease-in-out;  
-    border-radius:15px;
-}  
-.project__cover::after {  
-    display: block;  
-    content: '';  
-    position: absolute;  
-    z-index: 100;  
-    top: 0;  
-    left: 0;  
-    width: 100%;  
-    height: 100%;  
-    background: linear-gradient(226deg, rgba(225, 200, 246, 0.4) 0%, rgba(225, 200, 246, 0.4) 35%, rgba(225, 200, 246, 0.2) 42%, rgba(225, 200, 246, 0) 60%);  
-    transform: translateY(-20%);  
-    will-change: transform;  
-    transition: transform 0.65s cubic-bezier(0.18, 0.9, 0.58, 1);  
-}  
-.project-card:hover .b-game-card__cover {  
-    transform: rotateX(7deg) translateY(-6px);  
-}  
-.project-card:hover .b-game-card__cover::after {  
-    transform: translateY(0%);  
-}  
-.project-card::before {  
-    display: block;  
-    content: '';  
-    position: absolute;  
-    top: 5%;  
-    left: 5%;  
-    width: 89%;  
-    height: 89%;  
-    background: rgba(229, 144, 144, 0.3);  
-    border-radius: 15px;
-    box-shadow: 0 6px 12px 12px rgba(0, 0, 0, 0.4);  
-    will-change: opacity;  
-    transform-origin: top center;  
-    transform: skewX(0.001deg);  
-    transition: transform 0.35s ease-in-out, opacity 0.5s ease-in-out;  
-}  
-.project-card:hover::before {  
-    opacity: 0.6;  
-    transform: rotateX(7deg) translateY(-6px) scale(1.05);  
-}  
+
 
  h1.special{  
   text-align: center;
@@ -427,17 +313,8 @@ p.gs_reveal{
   }
 
 
-  canvas{
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 0;
-    margin: 0;
-    z-index: 3;
-    pointer-events: none;
-    mix-blend-mode: difference;
-  }
   
+  /* Logo */
   .navbar-brand {
     margin: 0;
     grid-area: author;
@@ -450,77 +327,8 @@ p.gs_reveal{
     transform: translateY(-50px);
     transition: all 400ms cubic-bezier(0.7, 0, 0.3, 1) 100ms;
   }
-/*   
-  .nav {
-    width: 100%;
-    position: fixed;
-    line-height: 30px;
-    vertical-align: middle;
-    z-index: 1000;
-    padding-right: 30px;
-}
 
-.nav div.logo {
-  vertical-align: middle;
-    float: left;
-    font-size: 30px;
-    background-image: linear-gradient(90deg, rgba(94,114,235,1) 0%, rgba(255,145,144,1) 56%, rgba(254,193,149,1) 100%);
-    color: transparent;
-    -webkit-background-clip: text;
-    
-}
-
-
-.nav div.main_list {
-    float: right;
-    font-size: 40px;
-    margin-top: 0;
-    margin-right:0;
-}
-
-.nav div.main_list ul {
-    width: 100%;
-    height: 80px;
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding-right: 2em;
-}
-
-.nav div.main_list ul li {
-    width: auto;
-    height: 20px;
-    padding-left: 20px;
-    
-}
-
-.nav div.main_list ul li a {
-    text-decoration: none;
-    color: #fff;
-   
-    
-}
-
-.nav div.main_list ul li a:hover {
-    color: rgba(255,145,144,1);
-}
-
-.navTrigger {
-  display: none;
-}
-
-.nav {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  -webkit-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-} */
-
-
-
-/* svg {
-  display:none;
-}  */
+  /* Cursor */
 
 .custom-cursor {
   position: fixed;
@@ -616,6 +424,32 @@ img{
 
 
 /* Project */
+.project-card {  
+    position: relative;  
+    z-index: 1;  
+    width: 100%;  
+    padding-bottom: 150%;  
+    perspective: 1000px;  
+}  
+.project-card__cover {  
+    position: absolute;  
+    z-index: 1;  
+    top: 0;  
+    left: 0;  
+    width: 100%;  
+    height: 100%;  
+    overflow: hidden;  
+    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);  
+    background-size: cover;  
+    perspective-origin: 50% 50%;  
+    transform-style: preserve-3d;  
+    transform-origin: top center;  
+    will-change: transform;  
+    transform: skewX(0.001deg);  
+    transition: transform 0.35s ease-in-out;  
+    border-radius:15px;
+}  
+
 .section-tours {
   justify-content: center;
   align-items: center;
@@ -644,9 +478,8 @@ img{
 
 
 .card_project {
-  perspective: 150rem;
-  -moz-perspective: 150rem;
-  
+  perspective: 100rem;
+  -moz-perspective: 100rem;
   height: 35rem;
   width: 380px;
 }
@@ -706,6 +539,30 @@ h6{
   animation: hueRotate 6s ease-in-out 3s infinite;
 
 }
+
+@media screen and (max-width: 760px) {  
+  .card_project {
+    perspective: 100rem;
+    -moz-perspective: 100rem;
+    height: 35rem;
+    width: 90%;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .row {
+    display:block;
+    position:relative;
+    width: 100%;
+    justify-content: center;
+    text-align: center;
+  }
+  .row .col {
+  width: 100%;
+  padding: 5%;
+}
+
+}  
 
 
 .smiley{
