--- a/style.css
+++ b/style.css
@@ -283,19 +283,16 @@ nav:hover ul li:not(:hover){
 
 
  h1.special{  
-  text-align: center;
-      font-size: 40px;
-      font-family: 'M PLUS Rounded 1c', sans-serif;
-        background-image: linear-gradient(-225deg,
+    text-align: center;
+    font-size: 2.5rem;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    background-image: linear-gradient(-225deg,
         rgba(94,114,235,1) 0%,
         rgba(255,145,144,1) 29%,
         rgba(254,193,149,1) 67%,
         #ebe75c 100%);
-    background-size: auto auto;
-    background-clip: border-box;
     background-size: 200% auto;
     color: #fff;
-    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     animation: textclip 2s linear infinite;
@@ -329,6 +326,7 @@ p.gs_reveal{
     padding-bottom: 5em;
     text-align: center;
     font-size: 3em;
+    
   }
 
 
@@ -589,10 +587,10 @@ h6{
 }
 
 h1.special{
-  font-size: 2rem;
+  font-size: 1.5rem;
   position:relative;
   top: 30%;
-  padding: 2%
+  padding: 2%;
 }
 
 }  
