--- a/style.css
+++ b/style.css
@@ -524,13 +524,16 @@ img{
   left: 50%;
   width: 320px;
   font-size: 18px;
-  text-align: center;
+  text-align: left;
+  letter-spacing: -1.2px;
+  line-height: 110%;
   transform: translate(-50%, -50%);
 }
 .card__text a {
-  font-size: 25px;
+  font-size: 30px;
   z-index: 100;;
   margin-bottom: 0;
+  text-align: center;
   color: rgba(94,114,235,1);
 }
 
@@ -1085,9 +1088,9 @@ p{
 
 .summary h3 {
   color: #ffffff;
-  font-size: 15px;
+  font-size: 14px;
   z-index: 30;
-  letter-spacing: -1px;
+  letter-spacing: -1.2px;
   padding-bottom: 3px;
   line-height: 90%;
 }
