--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ nav:hover ul li:not(:hover){
   .bar{
     margin-top:-2px;
     width:80%;
+    right:30px;
   }
   .bar::before{
     top: -.5rem;
@@ -187,7 +188,7 @@ nav:hover ul li:not(:hover){
     top:0;
   }
   nav{
-    width:25rem;
+    width:100%;
     height:100%;
     background-color:blanchedalmond;
     position:fixed;
@@ -323,9 +324,10 @@ p.gs_reveal{
   /*footer*/
   footer {
     background-color: black;
-    padding-bottom: 5em;
+    padding-bottom: 2rem;
     text-align: center;
     font-size: 3em;
+    outline:none;
     
   }
 
@@ -351,7 +353,13 @@ p.gs_reveal{
 .custom-cursor--link {
   transform: translate(-50%, -50%) scale(1);
 }
-
+@media screen and (max-width: 760px) {  
+  .custom-cursor {
+    display:none;
+  }
+  .custom-cursor--link {
+    display:none;
+}  }
 
 
 /* Loading */
@@ -596,6 +604,19 @@ h1.special{
   padding: 2%;
 }
 
+.card__text {
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 320px;
+  font-size: 18px;
+  text-align: left;
+  letter-spacing: -1.2px;
+  line-height: 110%;
+  padding:10px;
+  transform: translate(-50%, -50%);
+}
 }  
 
 /* Smiley */
