--- a/style.css
+++ b/style.css
@@ -527,6 +527,7 @@ letter-spacing: -1.2px;
 line-height: 110%;
 transform: translate(-50%, -50%);
 }
+
 .card__text a {
 font-size: 30px;
 z-index: 100;
@@ -536,7 +537,10 @@ justify-content: center;
 padding-left:45%;
 color: rgb(43, 57, 137);
 }
-
+ul.list{
+  list-style-position: outside;
+  padding-left:20px;
+}
 h6{
 font-size: 60px;
 padding:5%;
@@ -608,6 +612,7 @@ letter-spacing: -1.2px;
 line-height: 110%;
 padding:20px;
 transform: translate(-50%, -50%);
+
 }
 }  
 
